--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     
     <script src="script.js"></script>
+    <footer> <p style="font-weight: bold;">Created By</p> <p style="font-family: Georgia, 'Times New Roman', Times, serif;">Krishnamk</p></footer>
 </body>
 </html>
